# TheLittleEngineThatCould

./: .gitignore  BuildInstructions.sh  CMakeLists.txt  CMakePresets.json  README.md
assets/shaders/: basic.frag  basic.vert
cmake/: TLETCConfig.cmake.in
examples/: CMakeLists.txt
examples/01_MeshCreation/: main.cpp
examples/02_SpinningCube/: main.cpp
examples/03_Tesselation/: main.cpp  tesselation.cont  tesselation.eval  tesselation.frag  tesselation.vert
examples/04_PrimitiveTypes/: main.cpp
examples/05_InteractiveCamera/: main.cpp
examples/06_OrderedPhases/: main.cpp
examples/07_TheLittleLocomotive/: main.cpp
examples/08_AllAboard/: main.cpp
examples/09_Architecture/: main.cpp
include/TLETC/Core/: Application.h  Event.h  EventDispatcher.h  Input.h  Math.h  Types.h  Window.h
include/TLETC/Rendering/: Camera.h  Handle.h  Material.h  MeshRenderer.h  OrbitCamera.h  RenderDevice.h  Texture.h
include/TLETC/Resources/: GeometryFactory.h  Mesh.h
include/TLETC/Scene/: Behaviour.h  Entity.h  Transform.h
src/: CMakeLists.txt
src/Core/: Application.cpp  EventDispatcher.cpp  Input.cpp  Math.cpp  Window.cpp
src/Platform/OpenGL/: GLRenderDevice.cpp  GLRenderDevice.h
src/Rendering/: Camera.cpp  Handle.cpp  Material.cpp  MeshRenderer.cpp  OrbitCamera.cpp  Texture.cpp
src/Resources/: GeometryFactory.cpp  Mesh.cpp
src/Scene/: Behaviour.cpp  Entity.cpp
tests/: CMakeLists.txt
tests/Rendering/: test_handles.cpp
tests/Resources/: test_mesh.cpp
tests/Scene/: test_transform.cpp
