# Tests will be added later
# For now, just print a message

message(STATUS "Tests directory configured (no tests yet)")

# Uncomment when we add tests:
# file(GLOB_RECURSE TEST_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
# add_executable(TLETCTests ${TEST_SOURCES})
# target_link_libraries(TLETCTests PRIVATE TLETC::TLETC Catch2::Catch2WithMain)
